--- a/EpinDecryptApplication/appsettings.json
+++ b/EpinDecryptApplication/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;port=3909;database=sakila;user=root;password=root"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
